add dummy button

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-TEST
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+
+    <style>
+      button {
+        font-size: 1em;
+        margin: 1em;
+        padding: 0.25em 1em;
+        border: 2px solid palevioletred;
+        background: palevioletred;
+        border-radius: 3px;
+        line-height: 2rem;
+        cursor: pointer;
+      }
+
+      button a {
+        color: #fff;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>List of CVs</h1>
+    <div>
+      <button><a href="Andrew/index.html"> Andrew Radulescu</a></button>
+    </div>
+  </body>
+</html>
