--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h1>List of CVs</h1>
     <div>
       <button><a href="Andrew/index.html"> Andrew Radulescu</a></button>
+      <button><a href="Adrian/index.html"> Adrian S. Mihai</a></button>
     </div>
   </body>
 </html>
