--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div>
       <button><a href="Andrew/index.html"> Andrew Radulescu</a></button>
       <button><a href="Adrian/index.html"> Adrian S. Mihai</a></button>
+      <button><a href="Irina/index-START.html">Irina Macovei</a></button>
     </div>
   </body>
 </html>
