--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <button><a href="Andrew/index.html"> Andrew Radulescu</a></button>
       <button><a href="Adrian/index.html"> Adrian S. Mihai</a></button>
       <button><a href="Irina/index-START.html">Irina Macovei</a></button>
+      <button><a href="Alesia/index.html">Alesia Maria</a></button>
     </div>
   </body>
 </html>
