--- a/Adrian/index.html
+++ b/Adrian/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./style.css" type="text/css" rel="stylesheet" />
     <link
@@ -18,161 +19,154 @@
       <div class="background"></div>
     </header>
     <!-- CARD SECTION -->
-
-    <div class="card-content">
-      <img src="./man-1459246_640.png" alt="" />
-      <div class="card">
-        <h1>Adrian Mihai STANISTE</h1>
-        <br />
-        <br />
-        <h3>Telecomunication Engineer & Junior Web Designer</h3>
-        <h3>Life has no remote. Get up and change it yourself.</h3>
-        <br />
-        <hr />
-        <br />
-        <p>
-          <b>Age</b>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;26
-        </p>
-        <br />
-        <p>
-          <b>Address</b>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ploiesti, Ghe.
-          Gr. Cantacuzino 150
-        </p>
-        <br />
-        <p>
-          <b>E-mail</b>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;adrianmihaistaniste@gmail.com
-        </p>
-        <br />
-        <p>
-          <b>Phone</b>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+40723321964
-        </p>
-        <br />
-        <p>
-          <b>Website</b>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In
-          progress
-        </p>
-        <br />
-        <div class="footer">
-          <i class="fab fa-instagram"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-skype"></i>
+    <div class="allBody">
+        <div class="card-content">
+          <img src="./man-1459246_640.png" alt="" />
+          <div class="card">
+            <h1>Adrian Mihai STANISTE</h1>
+            <br />
+            <h3>Telecomunication Engineer & Junior Web Designer</h3>
+            <h3>Life has no remote. Get up and change it yourself.</h3>
+            <br />
+            <hr />
+            <br />
+            <p><strong>Age</strong></p>
+            <span class="rightText">26</span>
+            <p><strong>Address</strong></p>
+            <span class="rightText"
+              >Ploiesti, Ghe. Gr. Cantacuzino 150, Romania</span
+            >
+            <p><strong>Phone</strong></p>
+            <span class="rightText">+40 723 321 964</span>
+            <p><strong>E-mail</strong></p>
+            <span class="rightText">sadrinmihai94@gmail.com</span>
+            <p><strong>Website</strong></p>
+            <span class="rightText">In progress</span>
+            <div class="footer">
+              <a href="https://www.instagram.com/?hl=en" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://www.facebook.com/" target="_blank"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://twitter.com/?lang=en" target="_blank"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a href="https://www.skype.com/en/" target="_blank"
+                ><i class="fab fa-skype"></i
+              ></a>
+              <a href="https://www.linkedin.com/" target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="title1">SKILLS</div>
+      <div class="title1">SKILLS</div>
 
-    <!-- PERCENTAGE -->
+      <!-- PERCENTAGE -->
 
-    <div class="percentage">
-      <div class="paragraph">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-          provident facere, distinctio eaque fuga eius reiciendis optio, soluta
-          enim tempore illo ab consequuntur laborum in molestiae ipsum
-          laudantium deleniti! Placeat?
-          <br />
-          <br />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-          ex exercitationem, in soluta reprehenderit error asperiores nihil
-          molestias cupiditate dicta ab modi est neque officiis impedit
-          voluptates dignissimos ad sunt.
-        </p>
-      </div>
-      <div class="skills">
-        <li>
-          <hr3
-            >HTML5
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;90%</hr3
-          ><span class="bar"><span class="html"></span></span>
-        </li>
+      <div class="percentage">
+        <div class="paragraph">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            provident facere, distinctio eaque fuga eius reiciendis optio,
+            soluta enim tempore illo ab consequuntur laborum in molestiae ipsum
+            laudantium deleniti! Placeat?
+            <br />
+            <br />
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequuntur ex exercitationem, in soluta reprehenderit error
+            asperiores nihil molestias cupiditate dicta ab modi est neque
+            officiis impedit voluptates dignissimos ad sunt.
+          </p>
+        </div>
+        <div class="skills">
+          <li>
+            <p>HTML5</p>
+            <p>90%</p>
+            <span class="bar"><span class="html"></span></span>
+          </li>
 
-        <li>
-          <hr3
-            >CSS3
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;80%</hr3
-          ><span class="bar"><span class="css"></span></span>
-        </li>
+          <li>
+            <p>CSS3</p>
+            <p>80%</p>
+            <span class="bar"><span class="css"></span></span>
+          </li>
 
-        <li>
-          <hr3
-            >JS
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;10%</hr3
-          ><span class="bar"><span class="js"></span></span>
-        </li>
+          <li>
+            <p>JS</p>
+            <p>10%</p>
+            <span class="bar"><span class="js"></span></span>
+          </li>
 
-        <li>
-          <hr3
-            >MobileAppDev
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3%</hr3
-          ><span class="bar"><span class="mobileappdev"></span></span>
-        </li>
-      </div>
-    </div>
-
-    <div class="title2">EDUCATION</div>
-
-    <!-- TIMELINE -->
-
-    <div class="timeline">
-      <div class="container left">
-        <div class="content">
-          <h2>BS in Computer Science</h2>
-          <br />
-          <p>UNIVERSITY OF AWESOMENESS</p>
-          <br />
-          <h4>2006-2010</h4>
+          <li>
+            <p>MobileAppDev</p>
+            <p>5%</p>
+            <span class="bar"><span class="mobileappdev"></span></span>
+          </li>
         </div>
       </div>
-      <div class="container right">
-        <div class="content">
-          <h2>MS in Computer Science</h2>
-          <br />
-          <p>UNIVERSITY OF AWESOMENESS</p>
-          <br />
-          <h4>2010-2011</h4>
+
+      <div class="title2">EDUCATION</div>
+
+      <!-- TIMELINE -->
+
+      <div class="timeline">
+        <div class="container left">
+          <div class="content">
+            <h2>BS in Computer Science</h2>
+            <br />
+            <p>UNIVERSITY OF AWESOMENESS</p>
+            <br />
+            <h4>2006-2010</h4>
+          </div>
         </div>
-      </div>
-      <div class="container left">
-        <div class="content">
-          <h2>Certification in Machine Learning</h2>
-          <br />
-          <p>INSTITUTE OF CREATIVITY</p>
-          <br />
-          <h4>2011-2014</h4>
+        <div class="container right">
+          <div class="content">
+            <h2>MS in Computer Science</h2>
+            <br />
+            <p>UNIVERSITY OF AWESOMENESS</p>
+            <br />
+            <h4>2010-2011</h4>
+          </div>
         </div>
-      </div>
-      <div class="container right">
-        <div class="content">
-          <h2>Certification in Data Analysis</h2>
-          <br />
-          <p>INSTITUTE OF COOLNESS</p>
-          <br />
-          <h4>2012-2013</h4>
+        <div class="container left">
+          <div class="content">
+            <h2>Certification in Machine Learning</h2>
+            <br />
+            <p>INSTITUTE OF CREATIVITY</p>
+            <br />
+            <h4>2011-2014</h4>
+          </div>
         </div>
-      </div>
-      <div class="container left">
-        <div class="content">
-          <h2>Certification in Cyber Security</h2>
-          <br />
-          <p>INSTITUTE OF AWESOMENESS</p>
-          <br />
-          <h4>2013-2014</h4>
+        <div class="container right">
+          <div class="content">
+            <h2>Certification in Data Analysis</h2>
+            <br />
+            <p>INSTITUTE OF COOLNESS</p>
+            <br />
+            <h4>2012-2013</h4>
+          </div>
         </div>
-      </div>
-      <div class="container right">
-        <div class="content">
-          <h2>Certification in Big Data</h2>
-          <br />
-          <p>INSTITUTE OF COOLNESS</p>
-          <br />
-          <h4>2014-2015</h4>
+        <div class="container left">
+          <div class="content">
+            <h2>Certification in Cyber Security</h2>
+            <br />
+            <p>INSTITUTE OF AWESOMENESS</p>
+            <br />
+            <h4>2013-2014</h4>
+          </div>
+        </div>
+        <div class="container right">
+          <div class="content">
+            <h2>Certification in Big Data</h2>
+            <br />
+            <p>INSTITUTE OF COOLNESS</p>
+            <br />
+            <h4>2014-2015</h4>
+          </div>
         </div>
       </div>
     </div>
