--- a/Irina/index-START.html
+++ b/Irina/index-START.html
@@ -31,7 +31,7 @@
                   </div>
                   <div class="col-xs-7">
                     <div class="profile-info">
-                      <div class="profile-items clearfix">
+                      <div class="profile-items container">
                         <div class="profile-preword"><span>Hello</span></div>
                       </div>
                       <h1 class="profile-title">
@@ -42,17 +42,17 @@
                       </h2>
                     </div>
                     <ul class="profile-list">
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title">Age</strong>
                         <span class="cont">29</span>
                       </li>
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title">Address</strong>
                         <span class="cont"
                           >24058, Bucharest, Romania, Florilor 27, RO</span
                         >
                       </li>
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title">E-mail</strong>
                         <span class="cont"
                           ><a href="mailto:joanaDoe@company.com"
@@ -60,17 +60,17 @@
                           ></span
                         >
                       </li>
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title">Phone</strong>
                         <span class="cont"
                           ><a href="tel:+12562548456">+1 256 254 84 56</a></span
                         >
                       </li>
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title">Freelance</strong>
                         <span class="cont">till April 15, 2016</span>
                       </li>
-                      <li class="clearfix">
+                      <li class="container">
                         <strong class="title"
                           ><span class="button">ON VACATION</span></strong
                         >
@@ -87,55 +87,37 @@
               <div class="profile-social">
                 <ul class="social">
                   <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://www.facebook.com"
-                      target="_blank"
+                    <a href="https://www.facebook.com" target="_blank"
                       ><i class="icon icon-facebook"
                         ><img src="img/icons8-facebook-f-30.png"/></i
                     ></a>
                   </li>
                   <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://twitter.com"
-                      target="_blank"
+                    <a href="https://twitter.com" target="_blank"
                       ><i class="icon icon-twitter"
                         ><img src="img/icons8-twitter-24.png"/></i
                     ></a>
                   </li>
                   <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://www.linkedin.com"
-                      target="_blank"
-                      ><i class="icon icon-linkedin"
+                    <a href="https://www.plus.google.com" target="_blank"
+                      ><i class="icon icon-facebook"
+                        ><img src="img/icons8-google-plus-24.png"/></i
+                    ></a>
+                  </li>
+                  <li>
+                    <a href="https://www.linkedin.com" target="_blank"
+                      ><i class="icon icon-facebook"
                         ><img src="img/icons8-linkedin-24.png"/></i
                     ></a>
                   </li>
                   <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://plus.google.com"
-                      target="_blank"
-                      ><i class="icon icon-google-plus"
-                        ><img src="img/icons8-google-plus-26.png"/></i
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://dribbble.com"
-                      target="_blank"
+                    <a href="https://dribbble.com" target="_blank"
                       ><i class="icon icon-dribbble"
                         ><img src="img/icons8-dribbble-24.png"/></i
                     ></a>
                   </li>
                   <li>
-                    <a
-                      class="ripple-centered"
-                      href="https://www.instagram.com"
-                      target="_blank"
+                    <a href="https://www.instagram.com" target="_blank"
                       ><i class="icon icon-instagram"
                         ><img src="img/icons8-instagram-30.png"/></i
                     ></a>
@@ -171,7 +153,7 @@
                   <div class="progress-bar animated">
                     <div class="bar-data">
                       <span class="bar-title">Front-End Development</span>
-                      <span class="bar-value">50%</span>
+                      <span class="bar-value" id="b1">0%</span>
                     </div>
 
                     <div class="bar-line">
@@ -189,7 +171,7 @@
                   <div class="progress-bar animated">
                     <div class="bar-data">
                       <span class="bar-title">Back-End Development</span>
-                      <span class="bar-value">80%</span>
+                      <span class="bar-value" id="b2" >0%</span>
                     </div>
                     <div class="bar-line">
                       <span class="bar-fill" style="width: 80%;">
@@ -200,21 +182,21 @@
                   <div class="progress-bar animated">
                     <div class="bar-data">
                       <span class="bar-title">Mobile Development</span>
-                      <span class="bar-value" id="bar-value">0%</span>
+                      <span class="bar-value" id="b3">0%</span>
                     </div>
                     <div class="bar-line">
                       <span
                         class="bar-fill"
                         data-width="40%"
                         style="width: 40%;"
-                        ><span class="progress"></span
+                        ><span class="progress"> </span
                       ></span>
                     </div>
                   </div>
                   <div class="progress-bar animated">
                     <div class="bar-data">
                       <span class="bar-title">Desktop Development</span>
-                      <span class="bar-value" id="barValue">80%</span>
+                      <span class="bar-value" id="b4">0%</span>
                     </div>
                     <div class="bar-line">
                       <span
@@ -222,6 +204,7 @@
                         data-width="80%"
                         style="width: 80%;"
                         ><span class="progress"></span
+                        ></span
                       ></span>
                     </div>
                   </div>
@@ -232,91 +215,93 @@
           <!-- #skills -->
 
           <section id="education" class="section section-education">
-            <!--class animate-up missing-->
-            <h2 class="section-title">Education</h2>
-            <div class="timeline">
-              <div class="timeline-bar"></div>
-              <div class="timeline-inner clearfix">
-                <div
-                  class="timeline-box timeline-box-compact timeline-box-left"
-                >
-                  <span class="dot"></span>
+            <div class="animate-up animated">
+              <!--class animate-up missing-->
+              <h2 class="section-title">Education</h2>
+              <div class="timeline">
+                <div class="timeline-bar"></div>
+                <div class="timeline-inner container">
+                  <div
+                    class="timeline-box timeline-box-compact timeline-box-left"
+                  >
+                    <span class="dot"></span>
 
-                  <div class="timeline-box-inner animate-right animated">
-                    <!--add animated-->
-                    <span class="arrow"></span>
-                    <h3>Bachelor Computer Engineering</h3>
-                    <h4>INSTITUTE OF COOLNESS</h4>
-                    <div class="box">
-                      <div class="date">
-                        <span>2013 - 2014</span>
+                    <div class="timeline-box-inner animate-right animated">
+                      <!--add animated-->
+                      <span class="arrow"></span>
+                      <h3>Bachelor Computer Engineering</h3>
+                      <h4>INSTITUTE OF COOLNESS</h4>
+                      <div class="box">
+                        <div class="date">
+                          <span>2013 - 2014</span>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
 
-                <div
-                  class="timeline-box timeline-box-compact timeline-box-right"
-                >
-                  <span class="dot"></span>
+                  <div
+                    class="timeline-box timeline-box-compact timeline-box-right"
+                  >
+                    <span class="dot"></span>
 
-                  <div class="timeline-box-inner animate-left animated">
-                    <!--add animated-->
-                    <span class="arrow"></span>
-                    <h3>Master of Information Technology</h3>
-                    <h4>UNIVERSITY OF COOLNESS</h4>
-                    <div class="box">
-                      <div class="date"><span>2012 - 2020</span></div>
-                    </div>
-                  </div>
-                </div>
-
-                <div
-                  class="timeline-box timeline-box-compact timeline-box-left"
-                >
-                  <span class="dot"></span>
-
-                  <div class="timeline-box-inner animate-right">
-                    <span class="arrow"></span>
-                    <h3>Certificate for courses of Computer Science</h3>
-                    <h4>UNIVERSITY OF AWESOMENESS</h4>
-                    <div class="box">
-                      <div class="date">
-                        <span>2011 - 2012</span>
+                    <div class="timeline-box-inner animate-left animated">
+                      <!--add animated-->
+                      <span class="arrow"></span>
+                      <h3>Master of Information Technology</h3>
+                      <h4>UNIVERSITY OF COOLNESS</h4>
+                      <div class="box">
+                        <div class="date"><span>2012 - 2020</span></div>
                       </div>
                     </div>
                   </div>
-                </div>
 
-                <div
-                  class="timeline-box timeline-box-compact timeline-box-right"
-                >
-                  <span class="dot"></span>
+                  <div
+                    class="timeline-box timeline-box-compact timeline-box-left"
+                  >
+                    <span class="dot"></span>
 
-                  <div class="timeline-box-inner animate-left">
-                    <span class="arrow"></span>
-                    <h3>1 week Courses of Information Systems</h3>
-                    <h4>INSTITUTE OF AWESOMENESS</h4>
-                    <div class="box">
-                      <div class="date">
-                        <span>2009 - 2010</span>
+                    <div class="timeline-box-inner animate-right animated">
+                      <span class="arrow"></span>
+                      <h3>Certificate for courses of Computer Science</h3>
+                      <h4>UNIVERSITY OF AWESOMENESS</h4>
+                      <div class="box">
+                        <div class="date">
+                          <span>2011 - 2012</span>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
 
-                <div
-                  class="timeline-box timeline-box-compact timeline-box-left"
-                >
-                  <span class="dot"></span>
+                  <div
+                    class="timeline-box timeline-box-compact timeline-box-right"
+                  >
+                    <span class="dot"></span>
 
-                  <div class="timeline-box-inner animate-right">
-                    <span class="arrow"></span>
-                    <h3>Software Engineering</h3>
-                    <h4>UNIVERSITY OF AWESOMENESS</h4>
-                    <div class="box">
-                      <div class="date">
-                        <span>2007 - 2008</span>
+                    <div class="timeline-box-inner animate-left animated">
+                      <span class="arrow"></span>
+                      <h3>1 week Courses of Information Systems</h3>
+                      <h4>INSTITUTE OF AWESOMENESS</h4>
+                      <div class="box">
+                        <div class="date">
+                          <span>2009 - 2010</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div
+                    class="timeline-box timeline-box-compact timeline-box-left"
+                  >
+                    <span class="dot"></span>
+
+                    <div class="timeline-box-inner animate-right animated">
+                      <span class="arrow"></span>
+                      <h3>Software Engineering</h3>
+                      <h4>UNIVERSITY OF AWESOMENESS</h4>
+                      <div class="box">
+                        <div class="date">
+                          <span>2007 - 2008</span>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -332,7 +317,10 @@
       </div>
       <!-- .content -->
       <div class="footer">
-        <div class="section-box"></div>
+        <div class="section-box">
+       
+         
+        </div>
       </div>
     </div>
   </body>
