--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button><a href="Adrian/index.html"> Adrian S. Mihai</a></button>
       <button><a href="Irina/index-START.html">Irina Macovei</a></button>
       <button><a href="Alesia/index.html">Alesia Maria</a></button>
+      <button><a href="Apple Layout/index.html">Apple Layout</a></button>
     </div>
   </body>
 </html>
