Added contact section

--- a/Andrew/Tribus GSAP/index.html
+++ b/Andrew/Tribus GSAP/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- MARKUP HERE -->
@@ -1646,7 +1650,17 @@
         </defs>
       </svg>
     </div>
-
+    <div class="contact">
+      <h3>
+        Contact us
+        <a
+          href="mailto:andrew.radulescu@wearetribus.com"
+          style="color: #404040; text-decoration: none"
+          >here</a
+        >
+        !
+      </h3>
+    </div>
     <!-- MARKUP ENDS HERE -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="lib/CustomEase.min.js"></script>
