Added parallax scroll content

--- a/Andrew/Tribus GSAP/index.html
+++ b/Andrew/Tribus GSAP/index.html
@@ -5,11 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Tribus Technologies - Under Construction</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
-      rel="stylesheet"
-    />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -17,10 +12,31 @@
     <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- MARKUP HERE -->
-    <div class="wrapper">
+    <div class="panel wrapper">
+      <div class="scroll">
+        <span>SCROLL</span>
+        <span class="material-icons arrow_down"> keyboard_arrow_down </span>
+      </div>
       <svg
         viewBox="0 400 1356 1700"
         id="tribus_svg"
@@ -1660,18 +1676,27 @@
         </defs>
       </svg>
     </div>
-    <div class="contact">
-      <h3>
-        Contact us
-        <a
-          href="mailto:andrew.radulescu@wearetribus.com"
-          style="color: #404040; text-decoration: none"
-          >here</a
-        >
-        !
-      </h3>
+    <div class="panel contact">
+      <div class="contact_content">
+        <img class="logo" src="/Tribus_logo.svg" />
+        <h1>We'd love to hear from you</h1>
+        <h2>
+          Whether you have questions about our projects, pricing, or anything
+          else, our team is ready to answer all your questions
+        </h2>
+        <button class="mdc-button mdc-button--raised contact-button">
+          <a
+            class="mdc-button__label"
+            href="mailto:andrew.radulescu@wearetribus.com"
+            style="color: #ffffff; text-decoration: none"
+            >GET IN TOUCH</a
+          >
+        </button>
+      </div>
+      <img class="site_background" src="/background.svg" />
     </div>
     <!-- MARKUP ENDS HERE -->
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="./CustomEase.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
