Fixed orientation view issues

--- a/Andrew/Tribus GSAP/index.html
+++ b/Andrew/Tribus GSAP/index.html
@@ -1678,7 +1678,7 @@
     </div>
     <div class="panel contact">
       <div class="contact_content">
-        <img class="logo" src="/Tribus_logo.svg" />
+        <img class="tribus_logo" src="/Tribus_logo.svg" />
         <h1>We'd love to hear from you</h1>
         <h2>
           Whether you have questions about our projects, pricing, or anything
@@ -1693,7 +1693,6 @@
           >
         </button>
       </div>
-      <img class="site_background" src="/background.svg" />
     </div>
     <!-- MARKUP ENDS HERE -->
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
